...
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_circle_star"
            android:title="Home" />
        <item
            android:id="@+id/nav_all_clubs"
            android:icon="@drawable/ic_circle_star"
            android:title="All Clubs" />
        <item
            android:id="@+id/nav_followed"
            android:icon="@drawable/ic_circle_star"
            android:title="Followed Events" />
        <item
            android:id="@+id/nav_bookmark"
...
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:title="Setting" />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout" />
        <item
            android:id="@+id/nav_about"
            android:title="About" />
    </group>

</menu>
