...
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.Home"
        tools:showIn="@layout/activity_welcome" >

        <ImageView
            android:id="@+id/home_recommend_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:foregroundGravity="center"
...
